# quantalithos-method-library

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
artifacts/test/20260701T050111Z-commit-03-a/suites/contract-domain-fast/: cargo-test-contracts.txt  cargo-test-domain.txt  path-check.txt  report-dry-run.txt
artifacts/test/20260702T073133Z-commit-03-b/: path-check.txt  report-dry-run.txt
artifacts/test/20260702T073133Z-commit-03-b/suites/infra-runtime-fake/: test-output.txt
artifacts/test/20260702T073133Z-commit-03-b/suites/service-flow-fast/: test-output.txt
crates/api/: Cargo.toml
crates/api/src/: definition_catalog.rs  formalization_version.rs  lib.rs
crates/api/tests/: definition_catalog_entry.rs  formalization_version_entry.rs
crates/application/: Cargo.toml
crates/application/src/: definition_catalog.rs  formalization_version.rs  idempotency.rs  lib.rs  ports.rs  unit_of_work.rs
crates/application/tests/: application_shell_foundation.rs  definition_catalog_foundation.rs  formalization_version_foundation.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: commands.rs  consumption.rs  definition_catalog.rs  errors.rs  events.rs  fixtures.rs  formalization.rs  jobs.rs  lib.rs  metadata.rs  queries.rs  refs.rs  views.rs
crates/contracts/tests/: consumption_contracts.rs  contract_foundation_roundtrip.rs  definition_catalog_contracts.rs  formalization_contracts.rs
crates/domain/: Cargo.toml
crates/domain/src/: consumption_material.rs  errors.rs  formal_method_version.rs  lib.rs  method_asset_definition.rs  policies.rs
crates/domain/tests/: consumption_material.rs  domain_foundation.rs  formal_method_version.rs  method_asset_definition.rs
crates/infra/: Cargo.toml
crates/infra/src/: definition_catalog.rs  formalization_version.rs  lib.rs
crates/infra/tests/: definition_catalog_runtime.rs  formalization_version_runtime.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/method_library_api/: Cargo.toml
crates/method_library_api/src/: extractors.rs  lib.rs  main.rs  routes.rs
crates/method_library_application/: Cargo.toml
crates/method_library_application/src/: lib.rs  operations_services.rs  query_services.rs  services.rs  sync_services.rs
crates/method_library_application/src/ports/: fakes.rs  mod.rs
crates/method_library_application/tests/: downstream_contracts.rs  recovery_contracts.rs
crates/method_library_application/tests/support/: mod.rs
crates/method_library_contracts/: Cargo.toml
crates/method_library_contracts/src/: actor.rs  commands.rs  errors.rs  events.rs  jobs.rs  lib.rs  metadata.rs  queries.rs  snapshots.rs
crates/method_library_domain/: Cargo.toml
crates/method_library_domain/src/: error.rs  lib.rs
crates/method_library_domain/src/content/: aggregate.rs  fingerprint.rs  kind.rs  lifecycle.rs  mod.rs  reference.rs  version.rs
crates/method_library_domain/src/definitions/: mod.rs
crates/method_library_domain/src/policies/: mod.rs
crates/method_library_infra/: Cargo.toml
crates/method_library_infra/migrations/: 0001_init.sql  0002_supersede_links_content_family_id.sql
crates/method_library_infra/src/: lib.rs
crates/method_library_infra/src/persistence/: mod.rs  postgres.rs
crates/method_library_infra/tests/: nonfunctional_benchmarks.rs
crates/method_library_worker/: Cargo.toml
crates/method_library_worker/src/: lib.rs  operations_job.rs  outbox_relay.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
reports/method-library/: README.md  evidence-index.md
reports/method-library/acceptance/: handoff.md  veto-checklist.md
reports/method-library/application/: EV-002.md
reports/method-library/consistency/: EV-005.md
reports/method-library/fingerprint/: EV-004.md
reports/method-library/idempotency/: EV-008.md
reports/method-library/negative/: EV-003.md
reports/method-library/nonfunctional/: EV-012.md
reports/method-library/operations/: EV-009.md
reports/method-library/projection/: EV-007.md
reports/method-library/query/: EV-006.md
reports/method-library/recovery/: EV-011.md
reports/method-library/sync/: EV-010.md
reports/method-library/unit/: EV-001.md
reports/runs/20260701T050111Z-commit-03-a/suites/: contract-domain-fast.md
reports/runs/20260702T073133Z-commit-03-b/suites/: infra-runtime-fake.md  service-flow-fast.md
reports/runs/20260702T155112Z-commit-04-b/suites/: service-flow-fast.md
scripts/checks/: check_config_profiles.sh  check_paths.sh
scripts/gates/: run_ci_gate.sh
scripts/reports/: generate_reports.sh
tests/fixtures/: README.md
