[workspace]
members = [
    "crates/method_library_domain",
    "crates/method_library_contracts",
    "crates/method_library_application",
    "crates/method_library_infra",
    "crates/method_library_api",
    "crates/method_library_worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false
license = "UNLICENSED"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "time", "json"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
