[package]
name = "method-library-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "method_library_api"
path = "src/lib.rs"

[dependencies]
method-library-application.workspace = true
method-library-contracts.workspace = true
method-library-infra.workspace = true
