[package]
name = "method-library-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "method_library_application"
path = "src/lib.rs"

[dependencies]
method-library-contracts.workspace = true
method-library-domain.workspace = true
