[package]
name = "method-library-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "method_library_infra"
path = "src/lib.rs"

[dependencies]
method-library-application.workspace = true
method-library-contracts.workspace = true
method-library-domain.workspace = true
