[package]
name = "method_library_infra"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = []
p1-plugin = []
p1-configuration = []

[dependencies]
method_library_application = { path = "../method_library_application" }
method_library_contracts = { path = "../method_library_contracts" }
method_library_domain = { path = "../method_library_domain" }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true

[lints]
workspace = true
