[package]
name = "method_library_worker"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = []
p1-plugin = []
p1-configuration = []

[dependencies]
method_library_application = { path = "../method_library_application" }
method_library_contracts = { path = "../method_library_contracts" }
method_library_domain = { path = "../method_library_domain" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
time.workspace = true

[lints]
workspace = true
